# utf8-encoding

./: .gitignore  CMakeLists.txt  README.en.md  README.md  utf8-encoding.sln  version.in.h
cmake/: with_mt_if_msvc.cmake
cmake/Modules/: CheckComplierEnv.cmake  GetCompilerToolset.cmake  GetOSEnv.cmake
cmake/modules/: GetCompilerToolset.cmake
projects/vc2015/benchmark/: benchmark.vcxproj  benchmark.vcxproj.filters
projects/vc2015/utf8-encoding/: utf8-encoding.vcxproj  utf8-encoding.vcxproj.filters
src/benchmark/: AppManager.h  CPUWarmUp.h  CmdLine.h  StopWatch.h  Variant.h  benchmark.cpp  char_traits.h  jmCmdLine.h
src/benchmark/jstd/: Variant.h  apply_visitor.h  char_traits.h  function_traits.h
src/utf8-encoding/: BitUtils.h  fromutf8-sse.cc  fromutf8-sse.h  stddef.h  utf8_decode_sse.h  utf8_decode_sse41.h  utf8_utils.h  win_iconv.h
src/utf8-encoding/asm/: InstructionSet_x64.asm  InstructionSet_x86.asm  asmlib.h  utf8_decode_sse41_x64.asm  utf8_decode_sse41_x86.asm
texts/: video_title_small.txt
